# SDQ_meshes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Directional.cmake  libhedra.cmake  libigl.cmake
data/curvy_surface/: fvf_constraints.txt
data/enepper_surface/: fvf_constraints.txt
data/opus/: mesh.objbak
data/shell_2/: fvf_constraints.txt
data/snake/: geometry.gh
data/square_double_curv/: geometry_generation.gh
grasshopper/: vizualization&debugging.gh
illustrations/workflow/: 1.ai  2.ai  3.ai  4.ai  5.ai  6.ai  7.ai  8.ai
include/: Np3dpContext.hpp  gui.h  helpers.h  mesh_helpers.h  partitioning.h  paths.h  paths_tracing.h  piece.h  quad_mesh.h  strips.h  structs.h  vector_field.h
src/: Np3dpContext.cpp  gui.cpp  helpers.cpp  main.cpp  mesh_helpers.cpp  partitioning.cpp  paths.cpp  paths_tracing.cpp  piece.cpp  quad_mesh.cpp  strips.cpp  structs.cpp  vector_field.cpp
